Fixed percent not in decimals and wayting 2 min befor fetching data from LRZ